--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -118,12 +118,12 @@ header{
   text-decoration: none;
   display: inline-block;
   font-size: 17px;
-  margin: 4px 2px;
+  margin: 40px auto 0;
   cursor: pointer;
   border: none;
   border-radius: 50px;
   transition: background-color 0.3s;
-  position: absolute;
+  position: relative;
   top: 41%;
   left: 750px;
   justify-content: center;
@@ -193,6 +193,7 @@ h1{
   left: 750px;
   font-weight: bold;
   justify-content: center;
+  margin-top:40px;
 }
 
 #textoDebajoDeHola{
@@ -201,6 +202,7 @@ h1{
   font-size: 25px;
   top: 260px;
   left: 750px;
+  margin-top:20px;
 }
 
 #photo1{
@@ -234,6 +236,7 @@ h1{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin-right: 25%;
   line-height: 35px;
+  margin: 30px auto;
 }
 #resumen p{
   width: 50%;
